--- a/features.html
+++ b/features.html
@@ -48,7 +48,12 @@
     <link rel="stylesheet" href="./index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
+    <link
+      href="https://unpkg.com/aos@next/dist/aos.css"
+      rel="preload"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
     <link rel="canonical" href="https://www.wickedwipes.ca/features.html" />
     <link
       href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap"
