--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
       href="https://fonts.googleapis.com/css2?family=Concert+One&family=League+Spartan:wght@100;400;700;900&family=Mitr:wght@200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
+    <link
+      href="https://unpkg.com/aos@next/dist/aos.css"
+      rel="preload"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
     <link
       rel="preload"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
