--- a/who-we-are.html
+++ b/who-we-are.html
@@ -46,28 +46,16 @@
     <link rel="stylesheet" href="./index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap"
-      rel="stylesheet"
+      href="https://unpkg.com/aos@next/dist/aos.css"
+      rel="preload"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
     />
     <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Baloo:wght@400&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=League Spartan:wght@400&display=swap"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Concert+One&family=League+Spartan:wght@100;400;700;900&family=Mitr:wght@200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
       window.$zoho = window.$zoho || {};
       $zoho.salesiq = $zoho.salesiq || { ready: function () {} };
@@ -111,7 +99,6 @@
 
   <body>
     <!-- Google Tag Manager (noscript) -->
-
     <noscript
       ><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-PNF89GR5"
@@ -120,8 +107,6 @@
         style="display: none; visibility: hidden"
       ></iframe
     ></noscript>
-
-    <!-- End Google Tag Manager (noscript) -->
     <!-- Header Section -->
     <section
       class="p-4 md:px-40 md:py-10 flex flex-col items-end w-full bg-[url('/public/banner.png')] bg-no-repeat bg-cover h-full"
@@ -151,7 +136,6 @@
             ></path>
           </svg>
         </button>
-
         <!-- Navigation Tabs -->
         <nav
           class="hidden md:flex items-center justify-center bg-blue-300 rounded-full"
@@ -269,7 +253,6 @@
           and natural products that are good for people and the environment. 
         </p>
       </div>
-
       <!-- Testimonials section -->
       <div class="flex justify-center">
         <div
@@ -410,7 +393,6 @@
                 <div class="error-message" id="lname-error"></div>
               </div>
             </div>
-
             <div class="flex justify-between w-full gap-x-6 relative">
               <div class="flex w-full justify-between items-center">
                 <div class="flex flex-col w-full">
@@ -432,7 +414,6 @@
                   Verify
                 </button>
               </div>
-
               <div class="flex flex-col w-full">
                 <input
                   type="tel"
@@ -561,28 +542,6 @@
       </div>
     </section>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      // Social Media Links
-      document
-        .getElementById("linkedInImage")
-        .addEventListener("click", function () {
-          window.open(
-            "https://www.linkedin.com/company/wicked-wipes/",
-            "_blank"
-          );
-        });
-      document
-        .getElementById("instaImage")
-        .addEventListener("click", function () {
-          window.open("https://www.instagram.com/wickedhandwipes/", "_blank");
-        });
-      document.getElementById("fbImage").addEventListener("click", function () {
-        window.open(
-          "https://www.facebook.com/profile.php?id=61565429330359",
-          "_blank"
-        );
-      });
-    </script>
     <script>
       // Remove Links Function
       function removeLinks(textarea) {
@@ -777,7 +736,6 @@
     </script>
     <script>
       const details = document.getElementById("info");
-
       // Function to handle intersection
       function handleIntersection(entries) {
         entries.forEach((entry) => {
@@ -795,6 +753,26 @@
 
       // Observe the section
       observer.observe(details);
+      // Social Media Links
+      document
+        .getElementById("linkedInImage")
+        .addEventListener("click", function () {
+          window.open(
+            "https://www.linkedin.com/company/wicked-wipes/",
+            "_blank"
+          );
+        });
+      document
+        .getElementById("instaImage")
+        .addEventListener("click", function () {
+          window.open("https://www.instagram.com/wickedhandwipes/", "_blank");
+        });
+      document.getElementById("fbImage").addEventListener("click", function () {
+        window.open(
+          "https://www.facebook.com/profile.php?id=61565429330359",
+          "_blank"
+        );
+      });
     </script>
   </body>
 </html>
