--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
           class="object-cover w-full md:h-full h-[900px]"
           loop
           muted
+          preload="none"
           playsinline
         >
           <source src="./public/landing.mp4" loading="lazy" type="video/mp4" />
