--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             />
           </div>
           <div class="flex flex-col w-full text-white z-[200]" id="topic">
-            <h1 class="text-[30px] concert-one-regular w-full" id="topic">
+            <h1 class="text-[30px] w-full" id="topic">
               Hygienic, Safe, Natural, Environmentally Friendly Wipes
             </h1>
             <p class="text-xl font-normal py-5">
@@ -255,7 +255,7 @@
             id="topic1"
           >
             <h1
-              class="text-[78px] concert-one-regular font-normal w-full"
+              class="text-[78px] font-normal w-full"
               id="topic1"
             >
               Hygienic, Safe, Natural,<br />
@@ -318,7 +318,7 @@
       >
         <div class="w-full">
           <h2
-            class="text-4xl text-nowrap mitr-regular font-normal gradient-text"
+            class="text-4xl text-nowrap font-normal gradient-text"
           >
             Stylish single-use <br />
             hand wipes
@@ -350,7 +350,7 @@
             <img src="./public/water-drop.png" alt="" />
             <div>
               <h2
-                class="font-bold text-[28px] league-spartan font-bold text-[#3A50B3]"
+                class="text-[28px] text-[#3A50B3]"
               >
                 Natural
               </h2>
@@ -368,7 +368,7 @@
             <img src="./public/leaf.png" alt="" />
             <div>
               <h2
-                class="font-bold text-[28px] league-spartan font-bold text-[#3A50B3]"
+                class="text-[28px] text-[#3A50B3]"
               >
                 Biodegradable
               </h2>
@@ -385,7 +385,7 @@
             <img src="./public/recycle.png" alt="" />
             <div>
               <h2
-                class="font-bold text-[28px] league-spartan font-bold text-[#3A50B3]"
+                class="text-[28px] text-[#3A50B3]"
               >
                 Recyclable
               </h2>
@@ -443,7 +443,7 @@
       <div class="flex w-full my-10 justify-center">
         <h2
           id="hygiene-heading"
-          class="px-10 py-10 text-[#acd5ef] mitr-regular font-medium text-[70px] md:text-[100px] text-center hover:text-[#3A50B3] font-semibold"
+          class="px-10 py-10 text-[#acd5ef] text-[70px] md:text-[100px] text-center hover:text-[#3A50B3]"
         >
           Let’s make hygiene fun and desirable!
         </h2>
@@ -567,7 +567,7 @@
       <div class="flex flex-col justify-center items-center w-full gap-y-10">
         <div class="flex w-full md:px-10 px-4 justify-center">
           <h2
-            class="text-[28px] md:text-[78px] concert-one-regular gradient-text font-normal"
+            class="text-[28px] md:text-[78px] gradient-text font-normal"
           >
             Wicked Wipes is a smart <br />
             choice for your business
@@ -657,7 +657,7 @@
         >
           <div class="flex flex-col md:gap-4 gap-4">
             <h2
-              class="text-4xl md:text-[72px] text-gradient md:leading-none urbanist-regular font-semibold"
+              class="text-4xl md:text-[72px] text-gradient md:leading-none"
             >
               Make it yours
             </h2>
@@ -704,12 +704,12 @@
             class="rounded-full w-64 h-64 bg-[#77B5FF] absolute top-20 right-[-150px] md:top-40 md:right-[-100px] z-50 overflow-hidden"
           ></div>
           <h2
-            class="text-white text-[14px] md:text-[28px] urbanist-regular font-semibold"
+            class="text-white text-[14px] md:text-[28px]"
           >
             Get in touch with us!
           </h2>
           <h2
-            class="text-white [text-8px] md:text-[16px] urbanist-regular font-medium"
+            class="text-white [text-8px] md:text-[16px]"
           >
             to discuss your interest in Wicked Wipes
           </h2>
@@ -878,7 +878,7 @@
       >
         <div class="w-full flex gap-x-16">
           <img
-            class="blue-color-icon"
+            class="blue-color-icon size-auto"
             loading="lazy"
             alt=""
             src="./public/blue-color.svg"
@@ -898,7 +898,7 @@
           </nav>
         </div>
         <div class="flex md:flex-col gap-2">
-          <h2 class="text-white urbanist-regular font-bold text-base">
+          <h2 class="text-white text-base">
             Follow us
           </h2>
           <div class="flex gap-3 items-center">
