--- a/features.html
+++ b/features.html
@@ -56,27 +56,7 @@
     />
     <link rel="canonical" href="https://www.wickedwipes.ca/features.html" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Baloo:wght@400&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=League Spartan:wght@400&display=swap"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Concert+One&family=League+Spartan:wght@100;400;700;900&family=Mitr:wght@200;300;400;500;600;700&display=swap&family=Space+Grotesk:wght@300..700&display=swap&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
     <link
