--- a/private-label.html
+++ b/private-label.html
@@ -62,38 +62,13 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Baloo:wght@400&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=League Spartan:wght@400&display=swap"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Concert+One&family=League+Spartan:wght@100;400;700;900&family=Mitr:wght@200;300;400;500;600;700&display=swap&family=Space+Grotesk:wght@300..700&display=swap"
       rel="stylesheet"
     />
     <link
       rel="canonical"
       href="https://www.wickedwipes.ca/private-label.html"
     />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
       window.$zoho = window.$zoho || {};
       $zoho.salesiq = $zoho.salesiq || { ready: function () {} };
@@ -256,7 +231,7 @@
         class="w-full flex flex-col md:flex-row absolute justidy-center md:justify-between gap-y-6 md:gap-x-10 px-6 md:px-24 py-10 items-end bottom-0"
       >
         <h1
-          class="text-lg md:text-5xl concert-one-regular md:whitespace-nowrap"
+          class="text-lg md:text-5xl md:whitespace-nowrap"
         >
           Make an unforgettable impression <br class="hidden md:block" />
           with Wicked Wipes
@@ -277,7 +252,7 @@
         data-aos="zoom-in"
         data-aos-duration="1000"
       >
-        <h2 class="text-[48px] text-[#3A50B3] urbanist-regular font-semibold">
+        <h2 class="text-[48px] text-[#3A50B3]">
           One of a kind
         </h2>
       </div>
@@ -298,7 +273,7 @@
           data-aos-duration="1000"
         />
         <h2
-          class="text-xl urbanist-regular text-[#3A50B3] text-center pt-10 font-semibold"
+          class="text-xl text-[#3A50B3] text-center pt-10"
         >
           Being the only hand wipe of its kind elevates your business
           immediately
@@ -447,12 +422,12 @@
             class="rounded-full w-64 h-64 bg-[#77B5FF] absolute top-20 right-[-150px] md:top-40 md:right-[-100px] z-50 overflow-hidden"
           ></div>
           <h2
-            class="text-white text-[14px] md:text-[28px] urbanist-regular font-semibold"
+            class="text-white text-[14px] md:text-[28px]"
           >
             Get in touch with us!
           </h2>
           <h2
-            class="text-white [text-8px] md:text-[16px] urbanist-regular font-medium"
+            class="text-white [text-8px] md:text-[16px]"
           >
             to discuss your interest in Wicked Wipes
           </h2>
@@ -643,7 +618,7 @@
           </nav>
         </div>
         <div class="flex md:flex-col gap-2">
-          <h2 class="text-white urbanist-regular font-bold text-base">
+          <h2 class="text-white text-base">
             Follow Us
           </h2>
           <div class="flex gap-3 items-center">
