Optimized font style

--- a/features.html
+++ b/features.html
@@ -160,10 +160,10 @@
           class="hidden md:flex flex-col absolute z-[100] top-56 left-32 leading-[50px]"
           id="video-section1"
         >
-          <h2 class="text-[48px] text-[#97CAEB] urbanist-regular font-black">
+          <h2 class="text-[48px] text-[#97CAEB]">
             An elegant way to
           </h2>
-          <h2 class="text-[68px] urbanist-regular font-black text-white">
+          <h2 class="text-[68px] text-white">
             cleanse your hands
           </h2>
           <div class="block absolute z-[100] top-36 left 32">
@@ -264,7 +264,7 @@
         </div>
         <!-- Text Section 2 -->
         <div class="block absolute bottom-12 md:bottom-28 left-4 md:left-32">
-          <h2 class="text-white text-2xl md:text-3xl concert-one-regular">
+          <h2 class="text-white text-2xl md:text-3xl">
             Three components make up the<br class="hidden md:block" />
             complete product:
           </h2>
@@ -300,12 +300,12 @@
           class="flex flex-col w-full md:gap-y-6 md:bg-[url('/public/white 1.png')] md:bg-cover"
         >
           <h1
-            class="text-4xl md:text-[78px] text-[#97CAEB] font-bold urbanist-regular"
+            class="text-4xl md:text-[78px] text-[#97CAEB]"
           >
             Wicked Wipes
           </h1>
           <h1
-            class="text-4xl md:text-[78px] text-[#97CAEB] font-bold urbanist-regular hover:text-[#3A50B3]"
+            class="text-4xl md:text-[78px] text-[#97CAEB] hover:text-[#3A50B3]"
             id="design-heading"
           >
             Design
@@ -341,12 +341,12 @@
       <div class="flex flex-col md:flex-row w-full">
         <div class="flex flex-col w-full md:gap-y-6">
           <h2
-            class="text-white text-[40px] md:text-[78px] urbanist-regular font-semibold"
+            class="text-white text-[40px] md:text-[78px]"
           >
             How to use
           </h2>
           <h2
-            class="text-[#97CAEB] text-[40px] md:text-[78px] urbanist-regular font-semibold"
+            class="text-[#97CAEB] text-[40px] md:text-[78px]"
           >
             Wicked Wipes
           </h2>
@@ -354,7 +354,7 @@
         <div class="flex flex-col w-full mt-8 md:mt-0">
           <div class="w-full md:w-2/4 mb-2">
             <h2
-              class="text-white text-[28px] md:text-[46px] urbanist-regular font-semibold"
+              class="text-white text-[28px] md:text-[46px]"
             >
               STEP 1
             </h2>
@@ -373,7 +373,7 @@
       <div class="w-full flex justify-around py-16">
         <div class="flex flex-col w-56">
           <h2
-            class="text-white text-[28px] md:text-[46px] urbanist-regular font-semibold"
+            class="text-white text-[28px] md:text-[46px]"
           >
             STEP 2
           </h2>
@@ -384,7 +384,7 @@
         </div>
         <div class="flex flex-col w-56">
           <h2
-            class="text-white text-[28px] md:text-[46px] urbanist-regular font-semibold"
+            class="text-white text-[28px] md:text-[46px]"
           >
             STEP 3
           </h2>
@@ -395,7 +395,7 @@
         </div>
         <div class="flex flex-col w-56">
           <h2
-            class="text-white text-[28px] md:text-[46px] urbanist-regular font-semibold"
+            class="text-white text-[28px] md:text-[46px]"
           >
             STEP 4
           </h2>
@@ -502,12 +502,12 @@
       <div class="flex flex-col w-full">
         <div class="flex flex-col w-full md:gap-y-6">
           <h2
-            class="text-white text-[40px] md:text-[78px] urbanist-regular font-semibold"
+            class="text-white text-[40px] md:text-[78px]"
           >
             How to Use
           </h2>
           <h2
-            class="text-[#97CAEB] text-[40px] md:text-[78px] urbanist-regular font-semibold"
+            class="text-[#97CAEB] text-[40px] md:text-[78px]"
           >
             Wicked Wipes
           </h2>
@@ -519,7 +519,7 @@
               <div class="flex flex-col w-full mt-8">
                 <div class="w-full mb-2">
                   <h2
-                    class="text-white text-[28px] urbanist-regular font-semibold"
+                    class="text-white text-[28px]"
                   >
                     STEP 1
                   </h2>
@@ -548,7 +548,7 @@
                 <div class="flex flex-col justify-center items-center w-full">
                   <div class="w-full my-2 flex flex-col justify-center">
                     <h2
-                      class="text-white text-[28px] md:text-[46px] urbanist-regular font-semibold"
+                      class="text-white text-[28px] md:text-[46px]"
                     >
                       STEP 2
                     </h2>
@@ -594,7 +594,7 @@
               >
                 <div class="w-full my-2 flex flex-col justify-center">
                   <h2
-                    class="text-white text-[28px] md:text-[46px] urbanist-regular font-semibold"
+                    class="text-white text-[28px] md:text-[46px]"
                   >
                     STEP 3
                   </h2>
@@ -633,7 +633,7 @@
               >
                 <div class="w-full my-2 flex flex-col justify-center">
                   <h2
-                    class="text-white text-[28px] md:text-[46px] urbanist-regular font-semibold"
+                    class="text-white text-[28px] md:text-[46px]"
                   >
                     STEP 4
                   </h2>
@@ -706,7 +706,7 @@
         >
           <div class="w-full flex justify-between md:justify-start">
             <div
-              class="text-[28px] md:text-[40px] text-[#3a50b3] font-bold urbanist-regular md:bg-[#B5EA72] rounded-full md:h-56 md:w-56 flex justify-end md:justify-start items-center slide-in-up text-left md:text-left"
+              class="text-[28px] md:text-[40px] text-[#3a50b3] md:bg-[#B5EA72] rounded-full md:h-56 md:w-56 flex justify-end md:justify-start items-center slide-in-up text-left md:text-left"
             >
               <h2>Innovative</h2>
             </div>
@@ -739,7 +739,7 @@
           <div class="md:hidden w-full flex justify-between">
             <div class="bg-[#97CAEB] h-20 w-20 rounded-full"></div>
             <div
-              class="text-[28px] text-[#3a50b3] font-bold h-40 w-40 flex justify-end slide-in-up text-right text-nowrap"
+              class="text-[28px] text-[#3a50b3] h-40 w-40 flex justify-end slide-in-up text-right text-nowrap"
             >
               <h2 class="">Skin-safe <br />Cleaning Solution</h2>
             </div>
@@ -765,7 +765,7 @@
           </div>
           <div class="hidden md:w-full md:flex justify-end">
             <div
-              class="text-[28px] md:text-[40px] text-nowrap text-[#3a50b3] font-bold bg-[#97CAEB] rounded-full h-40 w-40 md:h-56 md:w-56 flex justify-end items-center slide-in-up text-right"
+              class="text-[28px] md:text-[40px] text-nowrap text-[#3a50b3] bg-[#97CAEB] rounded-full h-40 w-40 md:h-56 md:w-56 flex justify-end items-center slide-in-up text-right"
             >
               <h2>
                 Skin-safe <br />
@@ -780,7 +780,7 @@
         >
           <div class="w-full flex justify-center md:justify-start">
             <div
-              class="text-[28px] text-[40px] text-[#3a50b3] font-bold md:bg-[#B5EA72] rounded-full md:h-56 md:w-56 flex justify-end md:justify-start items-center slide-in-up text-left md:text-left"
+              class="text-[28px] text-[40px] text-[#3a50b3] md:bg-[#B5EA72] rounded-full md:h-56 md:w-56 flex justify-end md:justify-start items-center slide-in-up text-left md:text-left"
             >
               <h2>Environmentally Friendly</h2>
             </div>
@@ -808,7 +808,7 @@
         >
           <div class="bg-[#97CAEB] h-20 w-20 rounded-full"></div>
           <div
-            class="text-[28px] md:text-[40px] text-[#3a50b3] font-bold h-40 w-40 flex justify-end slide-in-up text-right text-nowrap"
+            class="text-[28px] md:text-[40px] text-[#3a50b3] h-40 w-40 flex justify-end slide-in-up text-right text-nowrap"
           >
             <h2 class="">Natural <br />Fragrances</h2>
           </div>
@@ -847,7 +847,7 @@
           </div>
           <div class="w-full flex justify-between md:justify-end">
             <div
-              class="hidden text-2xl md:text-4xl text-[#3a50b3] font-bold bg-[#B5EA72] rounded-full h-40 w-40 md:h-56 md:w-56 md:flex justify-center md:justify-end items-center text-center md:text-right"
+              class="hidden text-2xl md:text-4xl text-[#3a50b3] bg-[#B5EA72] rounded-full h-40 w-40 md:h-56 md:w-56 md:flex justify-center md:justify-end items-center text-center md:text-right"
             >
               <h2>Natural <br />Fragrances</h2>
             </div>
@@ -871,12 +871,12 @@
             class="rounded-full w-64 h-64 bg-[#77B5FF] absolute top-20 right-[-150px] md:top-40 md:right-[-100px] z-50 overflow-hidden"
           ></div>
           <h2
-            class="text-white text-[14px] md:text-[28px] urbanist-regular font-semibold"
+            class="text-white text-[14px] md:text-[28px]"
           >
             Get in touch with us!
           </h2>
           <h2
-            class="text-white [text-8px] md:text-[16px] urbanist-regular font-medium"
+            class="text-white [text-8px] md:text-[16px]"
           >
             to discuss your interest in Wicked Wipes
           </h2>
@@ -1067,7 +1067,7 @@
           </nav>
         </div>
         <div class="flex md:flex-col gap-2">
-          <h2 class="text-white urbanist-regular font-bold text-base">
+          <h2 class="text-white text-base">
             Follow Us
           </h2>
           <div class="flex gap-3 items-center">
