--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -164,9 +164,7 @@
     <!-- Privacy Policy Content -->
     <section class="w-full flex md:p-32 p-4">
       <div class="w-full flex flex-col justify-center p-4 md:px-20">
-        <h1 class="text-left text-2xl md:text-4xl concert-one-regular">
-          Privacy Policy
-        </h1>
+        <h1 class="text-left text-2xl md:text-4xl">Privacy Policy</h1>
         <p class="text-lg md:text-xl py-6 league-spartan">
           Thank you for visiting our web site. This privacy policy provides
           information on how we use personal information collected on our site.
@@ -179,9 +177,7 @@
           site to make sure that you understand how any personal information you
           provide will be used.
         </p>
-        <h2
-          class="text-left text-2xl md:text-4xl urbanist-regular font-semibold"
-        >
+        <h2 class="text-left text-2xl md:text-4xl">
           Collection of Information
         </h2>
         <p class="text-lg md:text-xl py-6 league-spartan">
@@ -193,9 +189,7 @@
           email from Wicked Wipes contains instructions on how to opt out of
           receiving further marketing emails from the Company.
         </p>
-        <h2
-          class="text-left text-2xl md:text-4xl urbanist-regular font-semibold"
-        >
+        <h2 class="text-left text-2xl md:text-4xl">
           Cookie/Tracking Technology
         </h2>
         <p class="text-lg md:text-xl py-6 league-spartan">
@@ -208,9 +202,7 @@
           technology, however, if you previously provided personally
           identifiable information, cookies may be tied to such information.
         </p>
-        <h2
-          class="text-left text-2xl md:text-4xl urbanist-regular font-semibold"
-        >
+        <h2 class="text-left text-2xl md:text-4xl">
           Distribution of Information
         </h2>
         <p class="text-lg md:text-xl py-6 league-spartan">
@@ -221,9 +213,7 @@
           (3) investigating fraud which has already taken place. The information
           is not provided to these companies for marketing purposes.
         </p>
-        <h2
-          class="text-left text-2xl md:text-4xl urbanist-regular font-semibold"
-        >
+        <h2 class="text-left text-2xl md:text-4xl">
           Commitment to Data Security
         </h2>
         <p class="text-lg md:text-xl py-6 league-spartan">
@@ -231,9 +221,7 @@
           authorized employees, have access to this information. All emails and
           newsletters from this site allow you to opt out of further mailings.
         </p>
-        <h2
-          class="text-left text-2xl md:text-4xl urbanist-regular font-semibold"
-        >
+        <h2 class="text-left text-2xl md:text-4xl">
           Privacy Contact Information
         </h2>
         <p class="text-lg md:text-xl py-6 league-spartan">
@@ -271,9 +259,7 @@
           </nav>
         </div>
         <div class="flex md:flex-col gap-2">
-          <h1 class="text-white font-['League Spartan'] font-bold text-base">
-            Follow Us
-          </h1>
+          <h2 class="text-white text-base">Follow Us</h2>
           <div class="flex gap-3 items-center">
             <img src="./public/Fb.svg" class="size-7" alt="fb" id="fbImage" />
             <img
