--- a/blog-details.html
+++ b/blog-details.html
@@ -278,9 +278,9 @@
           </nav>
         </div>
         <div class="flex md:flex-col gap-2">
-          <h1 class="text-white urbanist-regular font-bold text-base">
+          <h2 class="text-white text-base">
             Follow us
-          </h1>
+          </h2>
           <div class="flex gap-3 items-center">
             <img src="./public/Fb.svg" class="size-7" alt="fb" id="fbImage" />
             <img
