--- a/blogs.html
+++ b/blogs.html
@@ -315,12 +315,12 @@
             class="rounded-full w-64 h-64 bg-[#77B5FF] absolute top-20 right-[-150px] md:top-40 md:right-[-100px] z-50 overflow-hidden"
           ></div>
           <h2
-            class="text-white text-[14px] md:text-[28px] urbanist-regular font-semibold"
+            class="text-white text-[14px] md:text-[28px]"
           >
             Get in touch with us!
           </h2>
           <h2
-            class="text-white [text-8px] md:text-[16px] urbanist-regular font-medium"
+            class="text-white [text-8px] md:text-[16px]"
           >
             to discuss your interest in Wicked Wipes
           </h2>
@@ -463,9 +463,9 @@
           </nav>
         </div>
         <div class="flex md:flex-col gap-2">
-          <h1 class="text-white urbanist-regular font-bold text-base">
+          <h2 class="text-white text-base">
             Follow us
-          </h1>
+          </h2>
           <div class="flex gap-3 items-center">
             <img src="./public/Fb.svg" class="size-7" alt="fb" id="fbImage" />
             <img
