--- a/who-we-are.html
+++ b/who-we-are.html
@@ -211,7 +211,7 @@
       </div>
       <div class="flex flex-col w-full mt-96 pt-20">
         <h1
-          class="text-5xl concert-one-regular"
+          class="text-5xl"
           data-aos="fade-right"
           data-aos-duration="700"
         >
@@ -238,7 +238,7 @@
         class="p-4 md:px-24 md:py-16 md:flex justify-between w-full items-center"
       >
         <h2
-          class="text-[64px] md:text-[78px] urbanist-regular font-semibold w-full text-[#97CAEB]"
+          class="text-[64px] md:text-[78px] w-full text-[#97CAEB]"
           data-aos="fade-right"
           data-aos-duration="700"
         >
@@ -268,7 +268,7 @@
               class="rounded-full h-full object-cover duration-300 ease-in-out translate-y-16 group-hover:translate-y-0"
             />
             <h2
-              class="text-xl font-bold text-center text-[#3A50B3] urbanist-regular font-semibold pt-4"
+              class="text-xl font-bold text-center text-[#3A50B3] pt-4"
             >
               Shailesh Merai
             </h2>
@@ -282,7 +282,7 @@
               class="rounded-full h-full object-cover duration-300 ease-in-out translate-y-16 group-hover:translate-y-0"
             />
             <h2
-              class="text-xl font-bold text-center text-[#3A50B3] urbanist-regular font-semibold pt-4"
+              class="text-xl font-bold text-center text-[#3A50B3] pt-4"
             >
               John Sasso
             </h2>
@@ -293,7 +293,7 @@
         class="py-20 px-3 md:px-24 md:py-20 flex flex-col justify-center w-full items-center"
       >
         <h2
-          class="text-[64px] md:text-[78px] urbanist-regular font-semibold w-full text-[#97CAEB] text-center"
+          class="text-[64px] md:text-[78px] w-full text-[#97CAEB] text-center"
         >
           Who We are
         </h2>
@@ -325,12 +325,12 @@
             class="rounded-full w-64 h-64 bg-[#77B5FF] absolute top-20 right-[-150px] md:top-40 md:right-[-100px] z-50 overflow-hidden"
           ></div>
           <h2
-            class="text-white text-[14px] md:text-[28px] urbanist-regular font-semibold"
+            class="text-white text-[14px] md:text-[28px]"
           >
             Get in touch with us!
           </h2>
           <h2
-            class="text-white [text-8px] md:text-[16px] urbanist-regular font-medium"
+            class="text-white [text-8px] md:text-[16px]"
           >
             to discuss your interest in Wicked Wipes
           </h2>
@@ -519,7 +519,7 @@
           </nav>
         </div>
         <div class="flex md:flex-col gap-4 md:gap-2 py-4 md:py-0">
-          <h2 class="text-white urbanist-regular font-bold text-base">
+          <h2 class="text-white text-base">
             Follow us
           </h2>
           <div class="flex gap-3 items-center">
