--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             class="hidden w-full flex h-full z-[100] object-contain py-36 overflow-hidden"
             id="welcomeDiv"
           >
-            <img src="./public/pods1.png" class="absolute size-auto" alt="" />
+            <img src="./public/pods1.png" class="absolute size-auto" loading="lazy" alt="" />
           </div>
           <div
             class="hidden w-full flex h-full z-[100] pt-28 object-contain relative"
