--- a/index.html
+++ b/index.html
@@ -908,6 +908,7 @@
               class="size-7"
               alt="Insta"
               id="instaImage"
+              loading="lazy"
             />
             <img
               src="./public/LinkedIn.svg"
