--- a/blog-details.html
+++ b/blog-details.html
@@ -285,6 +285,7 @@
             <img src="./public/Fb.svg" class="size-7" alt="fb" id="fbImage" />
             <img
               src="./public/Instagram.svg"
+              loading="lazy"
               class="size-7"
               alt="Insta"
               id="instaImage"
