--- a/who-we-are.html
+++ b/who-we-are.html
@@ -528,6 +528,7 @@
               src="./public/Instagram.svg"
               class="size-7"
               alt="fb"
+              loading="lazy"
               id="instaImage"
             />
 
