--- a/private-label.html
+++ b/private-label.html
@@ -625,6 +625,7 @@
             <img src="./public/Fb.svg" class="size-7" alt="fb" id="fbImage" />
             <img
               src="./public/Instagram.svg"
+              loading="lazy"
               class="size-7"
               id="instaImage"
               alt="fb"
