--- a/index.html
+++ b/index.html
@@ -23,6 +23,21 @@
     />
     <meta property="og:image" content="/public/meta/wicked-wipes-home.jpg" />
     <meta property="og:url" content="https://www.wickedwipes.ca" />
+    <!-- Google Tag (g-tag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-E50PFDVXYE");
+    </script>
+    <!--Google Tag Manager -->
     <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
@@ -35,14 +50,11 @@
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-PNF89GR5");
     </script>
-    <script defer>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "G-E50PFDVXYE");
-    </script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-E50PFDVXYE"
+    ></script>
+        <!-- End of Google Tag Manager -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -206,7 +218,12 @@
             class="hidden w-full flex h-full z-[100] object-contain py-36 overflow-hidden"
             id="welcomeDiv"
           >
-            <img src="./public/pods1.png" class="absolute size-auto" loading="lazy" alt="" />
+            <img
+              src="./public/pods1.png"
+              class="absolute size-auto"
+              loading="lazy"
+              alt=""
+            />
           </div>
           <div
             class="hidden w-full flex h-full z-[100] pt-28 object-contain relative"
@@ -254,10 +271,7 @@
             class="flex flex-col w-full text-white absolute bottom-0"
             id="topic1"
           >
-            <h1
-              class="text-[78px] font-normal w-full"
-              id="topic1"
-            >
+            <h1 class="text-[78px] font-normal w-full" id="topic1">
               Hygienic, Safe, Natural,<br />
               Environmentally Friendly Wipes
             </h1>
@@ -317,9 +331,7 @@
         id="document-title"
       >
         <div class="w-full">
-          <h2
-            class="text-4xl text-nowrap font-normal gradient-text"
-          >
+          <h2 class="text-4xl text-nowrap font-normal gradient-text">
             Stylish single-use <br />
             hand wipes
           </h2>
@@ -349,11 +361,7 @@
           >
             <img src="./public/water-drop.png" alt="" />
             <div>
-              <h2
-                class="text-[28px] text-[#3A50B3]"
-              >
-                Natural
-              </h2>
+              <h2 class="text-[28px] text-[#3A50B3]">Natural</h2>
               <p class="league-spartan text-[16px]">
                 Wicked Wipes are alcohol-free, chemical-free and
                 colour-additive-free. The dermatologically tested,
@@ -367,11 +375,7 @@
           >
             <img src="./public/leaf.png" alt="" />
             <div>
-              <h2
-                class="text-[28px] text-[#3A50B3]"
-              >
-                Biodegradable
-              </h2>
+              <h2 class="text-[28px] text-[#3A50B3]">Biodegradable</h2>
               <p class="league-spartan text-[16px]">
                 Well-made, soft, yet hardy cellulose hand wipes are designed to
                 biodegrade naturally.
@@ -384,11 +388,7 @@
           >
             <img src="./public/recycle.png" alt="" />
             <div>
-              <h2
-                class="text-[28px] text-[#3A50B3]"
-              >
-                Recyclable
-              </h2>
+              <h2 class="text-[28px] text-[#3A50B3]">Recyclable</h2>
               <p class="league-spartan text-[16px]">
                 The pod is made from high quality PP / 05 raw material which is
                 100% recyclable.
@@ -566,9 +566,7 @@
     >
       <div class="flex flex-col justify-center items-center w-full gap-y-10">
         <div class="flex w-full md:px-10 px-4 justify-center">
-          <h2
-            class="text-[28px] md:text-[78px] gradient-text font-normal"
-          >
+          <h2 class="text-[28px] md:text-[78px] gradient-text font-normal">
             Wicked Wipes is a smart <br />
             choice for your business
           </h2>
@@ -656,9 +654,7 @@
           id="document-heading1"
         >
           <div class="flex flex-col md:gap-4 gap-4">
-            <h2
-              class="text-4xl md:text-[72px] text-gradient md:leading-none"
-            >
+            <h2 class="text-4xl md:text-[72px] text-gradient md:leading-none">
               Make it yours
             </h2>
             <p class="text-[20px] league-spartan text-[#3A50B3] word-wrap">
@@ -703,14 +699,10 @@
           <div
             class="rounded-full w-64 h-64 bg-[#77B5FF] absolute top-20 right-[-150px] md:top-40 md:right-[-100px] z-50 overflow-hidden"
           ></div>
-          <h2
-            class="text-white text-[14px] md:text-[28px]"
-          >
+          <h2 class="text-white text-[14px] md:text-[28px]">
             Get in touch with us!
           </h2>
-          <h2
-            class="text-white [text-8px] md:text-[16px]"
-          >
+          <h2 class="text-white [text-8px] md:text-[16px]">
             to discuss your interest in Wicked Wipes
           </h2>
           <div class="w-full py-8 md:pt-16 flex gap-x-6">
@@ -898,9 +890,7 @@
           </nav>
         </div>
         <div class="flex md:flex-col gap-2">
-          <h2 class="text-white text-base">
-            Follow us
-          </h2>
+          <h2 class="text-white text-base">Follow us</h2>
           <div class="flex gap-3 items-center">
             <img src="./public/Fb.svg" class="size-7" alt="fb" id="fbImage" />
             <img
